--- a/frontend/css/navbar.css
+++ b/frontend/css/navbar.css
@@ -46,39 +46,3 @@
     color: #007bff;
     font-weight: bold;
 }
-@media (prefers-color-scheme: light){
-    .navbar{
-        position: sticky;
-        top: 0;
-        background-color: #ffffff;
-        overflow: auto;
-        display: flex;
-        justify-content: flex-start;
-        height: 2em;
-        padding: 0.625em 0;
-        box-shadow: 0 0.125em 0.25em 0 rgba(0, 0, 0, 0.1);
-        }
-}
-@media (prefers-color-scheme: dark){
-    .navbar{
-        position: sticky;
-        top: 0;
-        background-color: #212425;
-        overflow: auto;
-        display: flex;
-        justify-content: flex-start;
-        height: 2em;
-        padding: 0.625em 0;
-        box-shadow: 0 0.125em 0.25em 0 rgba(0, 0, 0, 0.1);
-    }
-    .nav-item {
-        background-color: #1e2021;
-        margin-right: 0.625em;
-        padding: 0.375em 0.75em;
-        border-radius: 0.75em;
-        transition: background-color 0.3s ease;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-}
